<resources>
    <string name="app_name">Movie</string>
    <string name="title">title</string>
    <string name="date">date</string>
    <string name="movie">MOVIE</string>
    <string name="tvshow">TV SHOW</string>
    <string name="detail">Detail Activity</string>
    <string name="description">description</string>
</resources>